# FpStats

./: .gitignore  LICENSE  README.md  thesis.lkshs  thesis.lkshw
GMM/: GMM.cabal  GMM.cabal~  IOandPlottest.cabal~  Lfile  cabal.sandbox.config
GMM/src/: Distributions.hs  FileParsing.hs  GMM.hs  LikSpecLang.hs  MCMC.hs  Main.hs  Math.hs  Param.hs  Partition.hs  Test.hs
GMM/src/MCMC/: GibbsSampler.hs  MhSampler.hs
GMM/src/Math/: AbelianGroup.hs  SummaryStats.hs  Test.hs
GMM/src/Partition/: ArrayPartition.hs  SetPartition.hs
