name: GMM
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
description: A Gaussian Mixture Model with metropolis hastings inference
data-dir: ""

library
    build-depends: MemoTrie -any, QuickCheck -any, array -any,
                   base -any, containers -any, easyplot -any, hmatrix -any,
                   hstatistics -any, parsec -any, random -any
    exposed-modules: LikSpecLang Math Partition Distributions Cube FileParsing
    exposed: True
    buildable: True
    cpp-options: -DMAIN_FUNCTION=testMain
    extensions: BangPatterns
    hs-source-dirs: src


executable GMM
    build-depends: MemoTrie -any, QuickCheck -any, array -any,
                   base -any, containers -any, easyplot -any, hmatrix -any,
                   hstatistics -any, parsec -any, random -any
    main-is: Main.hs
    buildable: True
    extensions: MultiParamTypeClasses RankNTypes FlexibleInstances
                BangPatterns TypeSynonymInstances GADTs GADTSyntax
    hs-source-dirs: src
    other-modules: Math Partition GMM LikSpecLang Distributions Cube

test-suite test-GMM
    build-depends: MemoTrie -any, QuickCheck -any, array -any,
                   base -any, containers -any, easyplot -any, hmatrix -any,
                   hstatistics -any, parsec -any, random -any
    type: exitcode-stdio-1.0
    main-is: Main.hs
    buildable: True
    cpp-options: -DMAIN_FUNCTION=testMain
    extensions: BangPatterns
    hs-source-dirs: src
    other-modules: Math Partition LikSpecLang Distributions Cube
                   FileParsing
