name: GMM
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: Lfile
description: A Gaussian Mixture Model with metropolis hastings inference
data-dir: ""

library
    build-depends: base -any, hmatrix -any, hmatrix-gsl-stats ==0.2,
                   hstatistics -any, array -any, parsec -any, random -any,
                   easyplot -any
    exposed-modules: Distributions FileParsing LikSpecLang
                    MCMC MCMC.GibbsSampler MCMC.MhSampler
                    Partition Partition.SetPartition Partition.ArrayPartition
                    Param Math
    exposed: True
    buildable: True
    extensions: BangPatterns
    hs-source-dirs: src
    ghc-options:
        -O2
        -ddump-stg
        -ddump-to-file
        -threaded
        -fprof-auto
        -auto-all
        "-with-rtsopts=-N -p -s -h -i0.1"

executable GMM
    build-depends: base -any, hmatrix -any
    main-is: Main.hs
    buildable: True
    extensions: MultiParamTypeClasses RankNTypes FlexibleInstances
                BangPatterns TypeSynonymInstances GADTs GADTSyntax
    hs-source-dirs: src
    other-modules: MCMC Math Param Partition GMM LikSpecLang
                   Distributions
    ghc-options:
        -O2
        -ddump-stg
        -ddump-to-file
        -threaded
        -fprof-auto
        -auto-all
        "-with-rtsopts=-N -p -s -h -i0.1"

test-suite test-GMM
    build-depends: base -any, hmatrix -any, HUnit -any, QuickCheck -any, test-framework-quickcheck2 -any,
                   test-framework-hunit -any, test-framework -any, ieee754 -any
    type: exitcode-stdio-1.0
    main-is: Test.hs
    buildable: True
    extensions: BangPatterns
    hs-source-dirs: src
    other-modules: MCMC Math Param Partition LikSpecLang Distributions
                   FileParsing Math.Test
